--- a/1st_web_page.html
+++ b/1st_web_page.html
@@ -23,6 +23,14 @@
         </div>
         <div class="title">
             <h1>Pihu Creations<span></span></h1>
+            <p>Welcome to my art world. Lorem ipsum dolor sit amet consectetur adipisicing elit. Praesentium,a quidem.
+                Animi magnam unde enim asperiores modi excepturi provident veniam repellat ipsum 
+                perspiciatis ratione laboriosam natus, consectetur dolores neque iure. Lorem ipsum dolor, sit amet consectetur adipisicing elit. 
+                 Quos illo, nisi necessitatibus,minima consequuntur beatae molestias fugiat numquam magni debitis, saepe ut eaque animi adipisci 
+                 in optio odio! 
+                 Repudiandae debitis similique ducimus deleniti odit ipsa inventore perferendis praesentium rerum labore
+                 necessitatibus sit a itaque suscipit nemo ea, corrupti pariatur eos dolorem iusto. Consequatur in id,
+                 commodi, corporis odio atque laudantium labore dolorem quo, illo dolor nemo quas sed!</p>
         </div>
         <div class="button">
             <a href="#" class="btn">Watch Video</a>
